# mobility-feature-store

./: .gitignore  Makefile  README.md  pyproject.toml
api/: main.py  schemas.py
api/routes/: feature_views.py  latest.py  training_sets.py
configs/entities/: station.yaml  time_bucket_15m.yaml  zone.yaml
configs/environments/: local.yaml
configs/feature_views/: external_context_15m.yaml  station_demand_15m.yaml  station_supply_15m.yaml  temporal_context_15m.yaml  zone_pressure_15m.yaml
docs/: architecture.excalidraw  architecture.md  retrieval-semantics.md  tradeoffs.md
features/definitions/: loader.py  models.py
features/transforms/: station_demand_15m.py
registry/: catalog.py  metadata_store.py
scripts/: generate_synthetic_source.py  materialize.py  register_feature_views.py  retrieve.py  retrieve_latest.py
tests/: test_api.py  test_retrieval.py  test_retrieve_latest.py  test_station_demand_15m.py
